--- a/web/package.json
+++ b/web/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "web",
+  "name": "sav-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^1.3.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,10 +11,32 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.2",
+    "chroma-js": "^2.1.0",
+    "date-fns": "^2.14.0",
+    "formik": "^2.1.5",
+    "glamor": "^2.20.40",
+    "lodash": "^4.17.15",
+    "polished": "^3.6.5",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.14.2",
+    "react-icons": "^3.10.0",
+    "react-input-mask": "^2.0.4",
+    "react-js-pagination": "^3.0.3",
+    "react-modal": "^3.11.2",
+    "react-number-format": "^4.4.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "react-select": "^3.1.0",
+    "react-spinners": "^0.9.0",
+    "react-toastify": "^6.0.8",
+    "resolvers": "^1.0.0",
+    "styled-components": "^5.1.1",
+    "typescript": "~3.8",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +58,27 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.157",
+    "@types/react-datepicker": "^3.0.2",
+    "@types/react-input-mask": "^2.0.5",
+    "@types/react-js-pagination": "^3.0.3",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-select": "^3.0.15",
+    "@types/styled-components": "^5.1.0",
+    "@types/yup": "^0.29.11",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "prettier": "^2.0.4"
   }
 }
